package com.events.common.jdbc.executor;

import java.util.List;
import java.util.Map;

public interface EventsJdbcStatementExecutor {

  long insertAndReturnAutoGeneratedId(String sql, String idColumn, Object... params);

  int update(String sql, Object... params);

  <T> List<T> query(String sql, EventsRowMapper<T> eventsRowMapper, Object... params);

  List<Map<String, Object>> queryForList(String sql, Object... params);
}
