package com.events.common.jdbc.sql.dialect;

public interface EventsSqlDialectOrder {
  int getOrder();
}
